--- a/NE155 Project.ipynb
+++ b/NE155 Project.ipynb
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "c5fd05a7",
    "metadata": {},
    "outputs": [
@@ -183,16 +183,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "⚠️ Singular rows detected at indices: [  51   52   53 ... 2497 2498 2499]\n",
+      "✅ No singular rows detected. Proceeding to solve.\n",
       "✅ Linear system solved. Flux shape: (50, 50)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\steve\\anaconda3\\lib\\site-packages\\scipy\\sparse\\linalg\\dsolve\\linsolve.py:206: MatrixRankWarning: Matrix is exactly singular\n",
-      "  warn(\"Matrix is exactly singular\", MatrixRankWarning)\n"
      ]
     }
    ],
